--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
     "react-scripts": "4.0.3",
+    "react-tsparticles": "^1.37.5",
     "typescript": "^4.5.2",
     "web-vitals": "^1.1.2"
   },
